<resources>
    <string name="app_name">lunarFest</string>
    <string name="title_activity_login2">login2</string>

    <string name="title_activity_event_page">eventPage</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="title_activity_temp">temp</string>
    <string name="title_activity_event_sub1">eventSub1</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment1">Hello blank fragment1</string>
    <string name="hello_blank_fragment2">Hello blank fragment2</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_event">Events</string>
    <string name="menu_map">Map</string>
    <string name="menu_funstop">Fun Stop</string>
    <string name="menu_quiz">LunarFest Quiz</string>
    <string name="menu_point">My Points</string>
    <string name="menu_about">About</string>
    <string name="title_activity_nav">NavActivity</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_qr_code_sacnner">QrCodeSacnner</string>

    <!-- Quiz Strings -->
    <string name="quiz_completion_message">Quiz Completed!</string>
    <string name="test22">test</string>


</resources>
