<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_event"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/menu_event" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/menu_map" />
        <item
            android:id="@+id/nav_funstop"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/menu_funstop" />
        <item
            android:id="@+id/nav_quiz"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_quiz" />
        <item
            android:id="@+id/nav_point"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_point" />
        <item
            android:id="@+id/nav_about"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_about" />
    </group>



</menu>
